--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Emotional Voice Agent - AI-powered emotional support"
+      content="AIcognitech - AI-powered emotional intelligence platform"
     />
-    <title>AEI Voice Agent</title>
+    <title>AIcognitech</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
